# algolia-competitive-intelligence

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  vercel.json
apps/dashboard/: package.json
apps/dashboard/public/: index.html  latest-daily.md  latest-weekly.md
apps/dashboard/public/archive/: 2026-06-17-weekly.md  2026-06-17.md  2026-06-18-weekly.md  2026-06-20.md  2026-06-26-weekly.md  2026-06-28-weekly.md  2026-06-28.md  2026-06-29-weekly.md  2026-06-29.md
apps/dashboard/public/data/: latest.json  semantic-dashboard.json
apps/dashboard/scripts/: verify-static.js
data/: README.md
data/benchmarks/2026-06-27-ci-collector-benchmark/: benchmark.json  comparison.md
docs/: architecture.md
docs/decisions/: 2026-06-27-build-or-not-build-ci.md  2026-06-27-ci-collector-router-and-scout-first.md
docs/logs/: 2026-06-27-ci-v1-eod-goal.md  2026-06-27-ci-v1-implementation-closeout.md
docs/runbooks/: chowmes-runtime.md
docs/workspace/decision-first-dashboard/: 01-design-thinking.md  02-ux-correction.md  07b-uiux-constraints.md  _status.md
workers/daily-runner/: run.sh
workers/dashboard-runner/: run.sh
workers/weekly-runner/: run.sh
